Browser hitting back button bug fixed, intro video embedded, swalButton alignmend fixed

--- a/storeflex/src/styles/sfglobal.scss
+++ b/storeflex/src/styles/sfglobal.scss
@@ -684,3 +684,7 @@ $sf-primary-color: #f66711;
   text-align: center; /* Centered text/links */
   margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
 }
+
+.swal-footer {
+  text-align: center;
+  }
